
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2020 JUL 01a
  * in model/chem/*/chem.c
    - added find_Qei() and find_dQei_dx()
  * in model/fluid/*/fluid_source.c and model/fluid/_drift-diffusion/fluid.c
    - in test_dSchem_dU(), added gl->cycle.fluid.Uref as first argument to test_dW_dx()
  * in model/fluid/*_plasma/fluid_source.c
    - in find_Se(), added call to find_Qei() and removed pre-existing code that found Qei
    - in find_dSe_dU_transport(), added call to find_dQei_dx() and removed pre-existing code
      that found dQei_drhok
  * in model/share/chem_share.c 
    - in test_dW_dx(), added parameter rhokref and made drhok function of rhokref
  * in model/fluid/_Favre-Reynolds_plasma/fluid.c and model/fluid/_Favre-Reynolds_plasma/fluid_source.c
    - added option TEMODEL_EQUILIBRIUM with code based on _Navier-Stokes_plasma/fluid.c
    

2020 JUN 29a
  * in model/fluid/_Navier-Stokes_plasma/fluid_post.c
    - in find_post_variable_name_fluid() and find_post_variable_value_fluid() changed the ordering
      of a and rhoc
  * in model/share/chem_share.c
    - in _dkfdT_Arrhenius(), fixed a sign bug in dkfdT
  * in model/thermo/_generic/thermo.c
    - added find_EoverN_from_Te()
  * in model/chem/_Air_Plasma_11s_31r_Dunn-Kang/
    - added doc
    

2020 JUN 25a
  * in model/chem/_CO2_Plasma_23s_Park/doc/Makefile and model/chem/_Cs_Air_Plasma_13s_Lenard/doc/Makefile
    - fixed a bug within the make clean
  * in model/chem/_Cs_Air_Plasma_13s_Lenard/chem.c
    - added loops within reactions in which M1, M2, etc appeared to shorten the code
    - added Townsend ionization of NO+
  * in model/chem/_Cs_Air_Plasma_13s_Lenard/doc/report.tex
    - added Townsend ionization of NO+